--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
