--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://athipaty:oWNnVr9hOqJEve1T@cluster0.x0x1t6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
+MONGO_URI = mongodb+srv://athipaty:yMycnTXQU2kf2HGa@cluster0.tigttzh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;
 PORT = 3001;
