--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "expres": "^0.0.5",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.16.1"
